Updating the package metadata, and adding a tox.ini

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 recursive-include gs *
 recursive-include docs *
 include version.py
-include README.txt
-
+include bootstrap.py
+include buildout.cfg
+include *.txt
+include tox.ini
