--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,8 @@ envlist = py27, py33, py34, pypy
 
 [testenv]
 commands = python -munittest discover -s gs/recipe/setupgs/tests
+install_command =
+  pip install --pre -f http://eggs.iopen.net/groupserver/base/ {opts} {packages}
 deps =
     manuel
     mock
