Just testing in Python 2.7

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py33, py34, pypy
+envlist = py27
+#, py33, py34, pypy
 
 [testenv]
 commands = python -munittest discover -s gs/recipe/setupgs/tests
@@ -14,5 +15,19 @@ deps =
     manuel
     mock
     zc.buildout
-    zope.testing
+    zope.pagetemplate <= 3.6.3
+    zope.security <= 3.9.0
+    Zope2
+    Products.GroupServer
+    Products.CustomUserFolder
+    Products.FileSystemSite
+    Products.ZSQLMethods
     gs.recipe.base
+# The newer versions of zope.pagetemplate and zope.security have issues with
+# the older versions of Zope2:
+#
+#     from zope.security.untrustedpython import rcompile
+#    ImportError: No module named untrustedpython
+#
+#    from zope.pagetemplate.pagetemplate import _error_start, PTRuntimeError
+#    ImportError: cannot import name _error_start
